objects/Clause__c.object
<CustomObject>
    <fields>
        <fullName>Afffects_Bank_s_Liquidity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Afffects Bank&apos;s Liquidity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clause_Name__c</fullName>
        <label>Clause Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clause_Type__c</fullName>
        <label>Clause Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISDA Clause</fullName>
                </value>
                <value>
                    <fullName>GMRA Clause</fullName>
                </value>
                <value>
                    <fullName>GMSLA Clause</fullName>
                </value>
                <value>
                    <fullName>Prime Services Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clause_Unique__c</fullName>
        <label>Clause Unique #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMRA_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMRA Clause?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMRA_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMRA Default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMSLA_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMSLA Clause?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMSLA_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMSLA Default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HotDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HotDocs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISDA_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISDA Clause?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Clause</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Clause Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>